[package]
name = "pbrt-parser"
version = "0.1.0"
authors = ["Alex Kofke <akofke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.1.2"
aho-corasick = "0.7.6"
once_cell = "1.2.0"
memmap = "0.7.0"
libc = "0.2.66"
parking_lot = "0.10.0"

[dev-dependencies]
criterion = "0.3.0"
rand = "0.7.2"
humansize = "1.1.0"

[[bench]]
harness = false
name = "bench_parse"

[profile.release]
#lto = true
codegen-units = 1
debug = true
